// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render FooterMicro, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavAvatar, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <img
        alt="Profile avatar"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "alt": "Profile avatar",
        "src": "data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7",
      },
      "ref": null,
      "rendered": null,
      "type": "img",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <img
          alt="Profile avatar"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "Profile avatar",
          "src": "data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavComposer, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <styled.li
          className="prime left"
          left={true}
          prime={true}
          status={true}
>
          <Connect(ModalLauncher)
                    style={
                              Object {
                                        "textDecoration": "none",
                                      }
                    }
                    with={
                              Object {
                                        "id": "hints/auto-save",
                                        "info": Object {
                                          "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline!",
                                          "title": "Never Loose Your Work!",
                                        },
                                      }
                    }
          >
                    <span>
                              Draft
                    </span>
          </Connect(ModalLauncher)>
</styled.li>,
        <styled.li
          center={true}
          className="prime center"
          prime={true}
>
          <Unknown
                    className="indexRouteLink"
                    to="/"
          >
                    <Unknown />
          </Unknown>
</styled.li>,
        <styled.li
          className="prime right"
          prime={true}
          right={true}
>
          <NavLinkSend
                    editorStatus={undefined}
                    userRole={undefined}
                    userStatus={undefined}
          />
</styled.li>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(ModalLauncher)
            style={
                        Object {
                                    "textDecoration": "none",
                                  }
            }
            with={
                        Object {
                                    "id": "hints/auto-save",
                                    "info": Object {
                                      "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline!",
                                      "title": "Never Loose Your Work!",
                                    },
                                  }
            }
>
            <span>
                        Draft
            </span>
</Connect(ModalLauncher)>,
          "className": "prime left",
          "left": true,
          "prime": true,
          "status": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              false,
              false,
              <span>
                Draft
</span>,
            ],
            "style": Object {
              "textDecoration": "none",
            },
            "with": Object {
              "id": "hints/auto-save",
              "info": Object {
                "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline!",
                "title": "Never Loose Your Work!",
              },
            },
          },
          "ref": null,
          "rendered": Array [
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Draft",
              },
              "ref": null,
              "rendered": "Draft",
              "type": "span",
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "center": true,
          "children": <Unknown
            className="indexRouteLink"
            to="/"
>
            <Unknown />
</Unknown>,
          "className": "prime center",
          "prime": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Unknown />,
            "className": "indexRouteLink",
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavLinkSend
            editorStatus={undefined}
            userRole={undefined}
            userStatus={undefined}
/>,
          "className": "prime right",
          "prime": true,
          "right": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "editorStatus": undefined,
            "userRole": undefined,
            "userStatus": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <styled.li
            className="prime left"
            left={true}
            prime={true}
            status={true}
>
            <Connect(ModalLauncher)
                        style={
                                    Object {
                                                "textDecoration": "none",
                                              }
                        }
                        with={
                                    Object {
                                                "id": "hints/auto-save",
                                                "info": Object {
                                                  "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline!",
                                                  "title": "Never Loose Your Work!",
                                                },
                                              }
                        }
            >
                        <span>
                                    Draft
                        </span>
            </Connect(ModalLauncher)>
</styled.li>,
          <styled.li
            center={true}
            className="prime center"
            prime={true}
>
            <Unknown
                        className="indexRouteLink"
                        to="/"
            >
                        <Unknown />
            </Unknown>
</styled.li>,
          <styled.li
            className="prime right"
            prime={true}
            right={true}
>
            <NavLinkSend
                        editorStatus={undefined}
                        userRole={undefined}
                        userStatus={undefined}
            />
</styled.li>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(ModalLauncher)
              style={
                            Object {
                                          "textDecoration": "none",
                                        }
              }
              with={
                            Object {
                                          "id": "hints/auto-save",
                                          "info": Object {
                                            "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline!",
                                            "title": "Never Loose Your Work!",
                                          },
                                        }
              }
>
              <span>
                            Draft
              </span>
</Connect(ModalLauncher)>,
            "className": "prime left",
            "left": true,
            "prime": true,
            "status": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                false,
                false,
                <span>
                  Draft
</span>,
              ],
              "style": Object {
                "textDecoration": "none",
              },
              "with": Object {
                "id": "hints/auto-save",
                "info": Object {
                  "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline!",
                  "title": "Never Loose Your Work!",
                },
              },
            },
            "ref": null,
            "rendered": Array [
              false,
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Draft",
                },
                "ref": null,
                "rendered": "Draft",
                "type": "span",
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "center": true,
            "children": <Unknown
              className="indexRouteLink"
              to="/"
>
              <Unknown />
</Unknown>,
            "className": "prime center",
            "prime": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown />,
              "className": "indexRouteLink",
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavLinkSend
              editorStatus={undefined}
              userRole={undefined}
              userStatus={undefined}
/>,
            "className": "prime right",
            "prime": true,
            "right": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "editorStatus": undefined,
              "userRole": undefined,
              "userStatus": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavConnectionStatus, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
        Object {
            "color": Object {
              "background": [Function],
              "brand": [Function],
              "foreground": [Function],
              "highlight": [Function],
            },
            "effects": Object {
              "borderRadius": Object {
                "med": 0.5,
                "small": [Function],
              },
            },
            "elements": Object {
              "thickBorder": [Function],
            },
            "layer": Object {
              "card": 30,
              "nav": 20,
              "overlay": 40,
              "tuck": -1,
              "up": 10,
            },
            "opacity": Object {
              "half": 0.5,
              "least": 0.125,
              "most": 0.85,
            },
            "size": Object {
              "block": Object {
                "border": 8,
                "column": Object {
                  "l": 820,
                  "m": 750,
                },
                "padding": 1.5,
                "spacing": 1,
              },
              "breakpoint": Object {
                "exact": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "max": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "min": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "stops": Object {
                  "max": 1600,
                  "min": 320,
                },
              },
              "font": Object {
                "auto": Array [
                  "
                ",
                  "
        		@media (min-width: ",
                  "32.5625",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "32.5",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "20",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (min-width: ",
                  "100.0625",
                  "em) {
        			",
                  "font-size:	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  ";
              ",
                ],
                "l": 23,
                "m": 20,
                "make": Object {
                  "larger": 3,
                  "normal": 1,
                  "smaller": 0.85,
                  "tiny": 0.65,
                },
                "s": 18,
                "xs": 17,
              },
            },
            "typography": Object {
              "text": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Lora', Georgia, serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                ",
                ],
                "font": "'Lora', Georgia, serif",
                "lineHeight": 1.75,
              },
              "title": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Exo 2', Arial, sans-serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                  font-weight: ",
                  "600",
                  ";
                  margin: 0;
                ",
                ],
                "font": "'Exo 2', Arial, sans-serif",
                "lineHeight": 1.15,
              },
            },
          }
    }
>
    <styled.div />
</ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavGeneral, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <styled.li
          className="prime left mobile"
          left={true}
          mobile={true}
          prime={true}
>
          <Unknown
                    className={undefined}
                    to="/photo-stories"
          >
                    <span>
                              <span
                                        className="wide"
                              >
                                        Photo 
                              </span>
                              <span
                                        className="narrow"
                              >
                                        🎞
                              </span>
                              Stories
                    </span>
          </Unknown>
</styled.li>,
        <styled.li>
          <Unknown
                    className={undefined}
                    to="/perspective"
          >
                    <span>
                              Perspective
                    </span>
          </Unknown>
</styled.li>,
        <styled.li>
          <Unknown
                    className={undefined}
                    to="/focus"
          >
                    <span>
                              Focus
                    </span>
          </Unknown>
</styled.li>,
        <styled.li
          center={true}
          className="prime center"
          prime={true}
>
          <Unknown
                    className="indexRouteLink"
                    to="/"
          >
                    <Unknown />
          </Unknown>
</styled.li>,
        <styled.li
          className="left"
          left={true}
          narrow={true}
          prime={true}
>
          <Unknown
                    className={undefined}
                    to="/film-cameras"
          >
                    Film Cameras
          </Unknown>
</styled.li>,
        <styled.li
          className="prime right"
          prime={true}
          right={true}
>
          <Unknown
                    userRole={undefined}
                    userStatus={undefined}
          >
                    <NavLinkLabelMore
                              userImage={undefined}
                              userStatus={undefined}
                    />
          </Unknown>
</styled.li>,
      ],
      "onMouseOver": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            className={undefined}
            to="/photo-stories"
>
            <span>
                        <span
                                    className="wide"
                        >
                                    Photo 
                        </span>
                        <span
                                    className="narrow"
                        >
                                    🎞
                        </span>
                        Stories
            </span>
</Unknown>,
          "className": "prime left mobile",
          "left": true,
          "mobile": true,
          "prime": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span>
              <span
                            className="wide"
              >
                            Photo 
              </span>
              <span
                            className="narrow"
              >
                            🎞
              </span>
              Stories
</span>,
            "className": undefined,
            "to": "/photo-stories",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="wide"
>
                  Photo 
</span>,
                <span
                  className="narrow"
>
                  🎞
</span>,
                "Stories",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Photo ",
                  "className": "wide",
                },
                "ref": null,
                "rendered": "Photo ",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "🎞",
                  "className": "narrow",
                },
                "ref": null,
                "rendered": "🎞",
                "type": "span",
              },
              "Stories",
            ],
            "type": "span",
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            className={undefined}
            to="/perspective"
>
            <span>
                        Perspective
            </span>
</Unknown>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span>
              Perspective
</span>,
            "className": undefined,
            "to": "/perspective",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Perspective",
            },
            "ref": null,
            "rendered": "Perspective",
            "type": "span",
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            className={undefined}
            to="/focus"
>
            <span>
                        Focus
            </span>
</Unknown>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span>
              Focus
</span>,
            "className": undefined,
            "to": "/focus",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Focus",
            },
            "ref": null,
            "rendered": "Focus",
            "type": "span",
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "center": true,
          "children": <Unknown
            className="indexRouteLink"
            to="/"
>
            <Unknown />
</Unknown>,
          "className": "prime center",
          "prime": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Unknown />,
            "className": "indexRouteLink",
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            className={undefined}
            to="/film-cameras"
>
            Film Cameras
</Unknown>,
          "className": "left",
          "left": true,
          "narrow": true,
          "prime": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Film Cameras",
            "className": undefined,
            "to": "/film-cameras",
          },
          "ref": null,
          "rendered": "Film Cameras",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            userRole={undefined}
            userStatus={undefined}
>
            <NavLinkLabelMore
                        userImage={undefined}
                        userStatus={undefined}
            />
</Unknown>,
          "className": "prime right",
          "prime": true,
          "right": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <NavLinkLabelMore
              userImage={undefined}
              userStatus={undefined}
/>,
            "userRole": undefined,
            "userStatus": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "userImage": undefined,
              "userStatus": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <styled.li
            className="prime left mobile"
            left={true}
            mobile={true}
            prime={true}
>
            <Unknown
                        className={undefined}
                        to="/photo-stories"
            >
                        <span>
                                    <span
                                                className="wide"
                                    >
                                                Photo 
                                    </span>
                                    <span
                                                className="narrow"
                                    >
                                                🎞
                                    </span>
                                    Stories
                        </span>
            </Unknown>
</styled.li>,
          <styled.li>
            <Unknown
                        className={undefined}
                        to="/perspective"
            >
                        <span>
                                    Perspective
                        </span>
            </Unknown>
</styled.li>,
          <styled.li>
            <Unknown
                        className={undefined}
                        to="/focus"
            >
                        <span>
                                    Focus
                        </span>
            </Unknown>
</styled.li>,
          <styled.li
            center={true}
            className="prime center"
            prime={true}
>
            <Unknown
                        className="indexRouteLink"
                        to="/"
            >
                        <Unknown />
            </Unknown>
</styled.li>,
          <styled.li
            className="left"
            left={true}
            narrow={true}
            prime={true}
>
            <Unknown
                        className={undefined}
                        to="/film-cameras"
            >
                        Film Cameras
            </Unknown>
</styled.li>,
          <styled.li
            className="prime right"
            prime={true}
            right={true}
>
            <Unknown
                        userRole={undefined}
                        userStatus={undefined}
            >
                        <NavLinkLabelMore
                                    userImage={undefined}
                                    userStatus={undefined}
                        />
            </Unknown>
</styled.li>,
        ],
        "onMouseOver": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              className={undefined}
              to="/photo-stories"
>
              <span>
                            <span
                                          className="wide"
                            >
                                          Photo 
                            </span>
                            <span
                                          className="narrow"
                            >
                                          🎞
                            </span>
                            Stories
              </span>
</Unknown>,
            "className": "prime left mobile",
            "left": true,
            "mobile": true,
            "prime": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span>
                <span
                                className="wide"
                >
                                Photo 
                </span>
                <span
                                className="narrow"
                >
                                🎞
                </span>
                Stories
</span>,
              "className": undefined,
              "to": "/photo-stories",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="wide"
>
                    Photo 
</span>,
                  <span
                    className="narrow"
>
                    🎞
</span>,
                  "Stories",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Photo ",
                    "className": "wide",
                  },
                  "ref": null,
                  "rendered": "Photo ",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "🎞",
                    "className": "narrow",
                  },
                  "ref": null,
                  "rendered": "🎞",
                  "type": "span",
                },
                "Stories",
              ],
              "type": "span",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              className={undefined}
              to="/perspective"
>
              <span>
                            Perspective
              </span>
</Unknown>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span>
                Perspective
</span>,
              "className": undefined,
              "to": "/perspective",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Perspective",
              },
              "ref": null,
              "rendered": "Perspective",
              "type": "span",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              className={undefined}
              to="/focus"
>
              <span>
                            Focus
              </span>
</Unknown>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span>
                Focus
</span>,
              "className": undefined,
              "to": "/focus",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Focus",
              },
              "ref": null,
              "rendered": "Focus",
              "type": "span",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "center": true,
            "children": <Unknown
              className="indexRouteLink"
              to="/"
>
              <Unknown />
</Unknown>,
            "className": "prime center",
            "prime": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown />,
              "className": "indexRouteLink",
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              className={undefined}
              to="/film-cameras"
>
              Film Cameras
</Unknown>,
            "className": "left",
            "left": true,
            "narrow": true,
            "prime": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Film Cameras",
              "className": undefined,
              "to": "/film-cameras",
            },
            "ref": null,
            "rendered": "Film Cameras",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              userRole={undefined}
              userStatus={undefined}
>
              <NavLinkLabelMore
                            userImage={undefined}
                            userStatus={undefined}
              />
</Unknown>,
            "className": "prime right",
            "prime": true,
            "right": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <NavLinkLabelMore
                userImage={undefined}
                userStatus={undefined}
/>,
              "userRole": undefined,
              "userStatus": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "userImage": undefined,
                "userStatus": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavItem, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
        Object {
            "color": Object {
              "background": [Function],
              "brand": [Function],
              "foreground": [Function],
              "highlight": [Function],
            },
            "effects": Object {
              "borderRadius": Object {
                "med": 0.5,
                "small": [Function],
              },
            },
            "elements": Object {
              "thickBorder": [Function],
            },
            "layer": Object {
              "card": 30,
              "nav": 20,
              "overlay": 40,
              "tuck": -1,
              "up": 10,
            },
            "opacity": Object {
              "half": 0.5,
              "least": 0.125,
              "most": 0.85,
            },
            "size": Object {
              "block": Object {
                "border": 8,
                "column": Object {
                  "l": 820,
                  "m": 750,
                },
                "padding": 1.5,
                "spacing": 1,
              },
              "breakpoint": Object {
                "exact": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "max": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "min": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "stops": Object {
                  "max": 1600,
                  "min": 320,
                },
              },
              "font": Object {
                "auto": Array [
                  "
                ",
                  "
        		@media (min-width: ",
                  "32.5625",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "32.5",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "20",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (min-width: ",
                  "100.0625",
                  "em) {
        			",
                  "font-size:	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  ";
              ",
                ],
                "l": 23,
                "m": 20,
                "make": Object {
                  "larger": 3,
                  "normal": 1,
                  "smaller": 0.85,
                  "tiny": 0.65,
                },
                "s": 18,
                "xs": 17,
              },
            },
            "typography": Object {
              "text": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Lora', Georgia, serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                ",
                ],
                "font": "'Lora', Georgia, serif",
                "lineHeight": 1.75,
              },
              "title": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Exo 2', Arial, sans-serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                  font-weight: ",
                  "600",
                  ";
                  margin: 0;
                ",
                ],
                "font": "'Exo 2', Arial, sans-serif",
                "lineHeight": 1.15,
              },
            },
          }
    }
>
    <styled.li />
</ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavLink, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeClassName": "active",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeClassName": "active",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavLogo, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(Component) />,
      "title": "Analog.Cafe",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Component) />,
        "title": "Analog.Cafe",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavLogoLink, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "activeClassName": "active",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "activeClassName": "active",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavMore, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "branded": undefined,
      "children": undefined,
      "element": undefined,
      "inverse": undefined,
      "style": Object {
        "paddingRight": ".25em",
        "textDecoration": "none",
      },
      "with": Object {
        "id": "nav/more",
        "info": Object {
          "buttons": Array [
            null,
            null,
            null,
            null,
            Object {
              "mobile": "on",
              "text": "Photo Stories",
              "to": "/photo-stories",
            },
            Object {
              "mobile": "on",
              "text": "Film Cameras",
              "to": "/film-cameras",
            },
            Object {
              "text": "Collaborations",
              "to": "/collaborations",
            },
            Object {
              "text": "Solo Projects",
              "to": "/solo-projects",
            },
            Object {
              "text": "Editorials",
              "to": "/editorials",
            },
            Object {
              "text": "About Analog.Cafe",
              "to": "/about",
            },
            Object {
              "branded": true,
              "text": "Submit",
              "to": "/submit",
            },
          ],
          "title": "More ",
        },
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "branded": undefined,
        "children": undefined,
        "element": undefined,
        "inverse": undefined,
        "style": Object {
          "paddingRight": ".25em",
          "textDecoration": "none",
        },
        "with": Object {
          "id": "nav/more",
          "info": Object {
            "buttons": Array [
              null,
              null,
              null,
              null,
              Object {
                "mobile": "on",
                "text": "Photo Stories",
                "to": "/photo-stories",
              },
              Object {
                "mobile": "on",
                "text": "Film Cameras",
                "to": "/film-cameras",
              },
              Object {
                "text": "Collaborations",
                "to": "/collaborations",
              },
              Object {
                "text": "Solo Projects",
                "to": "/solo-projects",
              },
              Object {
                "text": "Editorials",
                "to": "/editorials",
              },
              Object {
                "text": "About Analog.Cafe",
                "to": "/about",
              },
              Object {
                "branded": true,
                "text": "Submit",
                "to": "/submit",
              },
            ],
            "title": "More ",
          },
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavWrapper, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.nav />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-fjdhpX nsimD",
    },
    "ref": null,
    "rendered": null,
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-fjdhpX nsimD",
      },
      "ref": null,
      "rendered": null,
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
